<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe"
                android:layout_gravity="center"
                android:fontFamily="@font/cookie"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="35dp"
                android:layout_margin="20dp"/>
            <EditText
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:hint="@string/recipe_name"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/amaranth"
                android:textStyle="bold"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/shape_selector"
                android:textAlignment="center"
                android:id="@+id/food_name"/>
            <EditText
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:hint="@string/time"
                android:layout_margin="20dp"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:fontFamily="@font/amaranth"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/shape_selector"
                android:id="@+id/time"/>

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/Ingredients"
                android:lines="2"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:fontFamily="@font/amaranth"
                android:textStyle="bold"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/shape_selector"
                android:id="@+id/ingridients"/>


/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/pic"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:textColor="#FFF"
                android:fontFamily="@font/amaranth"
                android:background="@drawable/shape_selector_two"
                android:id="@+id/take_pic_btn"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/resultIv"/>


            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_margin="10dp"
                android:background="@drawable/shape_selector_two"
                android:layout_gravity="center"
                android:textColor="#FFF"
                android:fontFamily="@font/amaranth"
                android:id="@+id/add_btn"/>


            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_margin="20dp"
                android:background="@drawable/shape_selector_two"
                android:layout_gravity="center"
                android:fontFamily="@font/amaranth"
                android:textColor="#FFF"
                android:id="@+id/back_btn"/>

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>