<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/coloradd"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/recipe_pic"
            />
        <LinearLayout
            android:id="@+id/Linear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/recipe_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/Recipename"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/amaranth"
                    android:textColor="#000"
                    android:id="@+id/recipe_name"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/Linear5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/Linear3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/prep_time2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/Timepreperation"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:id="@+id/prep_time"
                        android:fontFamily="@font/amaranth"
                        android:textStyle="bold"
                        android:textColor="#000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/dakot"
                        android:fontFamily="@font/amaranth"
                        android:textColor="#000"

                        />


                </LinearLayout>



            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>






